--- a/package.json
+++ b/package.json
@@ -52,7 +52,9 @@
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "husky": "^7.0.1",
     "jest": "27.0.3",
+    "lint-staged": "^11.0.1",
     "prettier": "^2.3.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
