--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
   "private": true,
   "dependencies": {
     "@nestjs/common": "^7.0.0",
+    "@nestjs/config": "^1.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "joi": "^17.4.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.6.3",
     "tslib": "^2.0.0"
