--- a/package.json
+++ b/package.json
@@ -31,10 +31,16 @@
     "@nestjs/config": "^1.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/typeorm": "^8.0.1",
     "joi": "^17.4.1",
+    "mssql": "^7.1.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "~6.6.3",
-    "tslib": "^2.0.0"
+    "rxjs": "^7.2.0",
+    "sequelize": "^6.6.5",
+    "sequelize-cli": "^6.2.0",
+    "tedious": "^11.2.0",
+    "tslib": "^2.0.0",
+    "typeorm": "^0.2.34"
   },
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
@@ -49,6 +55,7 @@
     "@nrwl/workspace": "12.5.8",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
+    "@types/sequelize": "^4.28.10",
     "@typescript-eslint/eslint-plugin": "4.19.0",
     "@typescript-eslint/parser": "4.19.0",
     "dotenv": "8.2.0",
@@ -58,6 +65,7 @@
     "jest": "27.0.3",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.1",
+    "sequelize-typescript": "^2.1.0",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "typescript": "~4.2.4"
