--- a/package.json
+++ b/package.json
@@ -45,19 +45,19 @@
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.5.8",
-    "@nrwl/eslint-plugin-nx": "12.5.8",
-    "@nrwl/jest": "12.5.8",
-    "@nrwl/linter": "12.5.8",
-    "@nrwl/nest": "12.5.8",
-    "@nrwl/node": "12.5.8",
-    "@nrwl/tao": "12.5.8",
-    "@nrwl/workspace": "12.5.8",
+    "@nrwl/cli": "12.6.6",
+    "@nrwl/eslint-plugin-nx": "12.6.6",
+    "@nrwl/jest": "12.6.6",
+    "@nrwl/linter": "12.6.6",
+    "@nrwl/nest": "12.6.6",
+    "@nrwl/node": "12.6.6",
+    "@nrwl/tao": "12.6.6",
+    "@nrwl/workspace": "12.6.6",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@types/sequelize": "^4.28.10",
-    "@typescript-eslint/eslint-plugin": "4.19.0",
-    "@typescript-eslint/parser": "4.19.0",
+    "@typescript-eslint/eslint-plugin": "4.28.5",
+    "@typescript-eslint/parser": "4.28.5",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
@@ -68,7 +68,7 @@
     "sequelize-typescript": "^2.1.0",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
-    "typescript": "~4.2.4"
+    "typescript": "4.3.5"
   },
   "husky": {
     "hooks": {
