--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@nrwl/node": "12.6.6",
     "@nrwl/tao": "12.6.6",
     "@nrwl/workspace": "12.6.6",
+    "@nxext/svelte": "^12.0.5",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@types/sequelize": "^4.28.10",
