--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
     "@nrwl/cli": "12.6.6",
+    "@nrwl/cypress": "^12.6.6",
     "@nrwl/eslint-plugin-nx": "12.6.6",
     "@nrwl/jest": "12.6.6",
     "@nrwl/linter": "12.6.6",
