generate initial svelte client

--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,13 @@
     },
     "film": {
       "tags": []
+    },
+    "svelte-client": {
+      "tags": []
+    },
+    "svelte-client-e2e": {
+      "tags": [],
+      "implicitDependencies": ["svelte-client"]
     }
   }
 }
