--- a/package.json
+++ b/package.json
@@ -55,19 +55,29 @@
     "@nrwl/tao": "12.6.6",
     "@nrwl/workspace": "12.6.6",
     "@nxext/svelte": "^12.0.5",
+    "@testing-library/svelte": "^3.0.3",
+    "@tsconfig/svelte": "^1.0.10",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@types/sequelize": "^4.28.10",
     "@typescript-eslint/eslint-plugin": "4.28.5",
     "@typescript-eslint/parser": "4.28.5",
+    "cypress": "^7.3.0",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
+    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-svelte3": "^3.1.2",
     "husky": "^7.0.1",
     "jest": "27.0.3",
     "lint-staged": "^11.0.1",
     "prettier": "^2.3.1",
+    "rollup-plugin-local-resolve": "^1.0.7",
     "sequelize-typescript": "^2.1.0",
+    "svelte": "^3.41.0",
+    "svelte-check": "^1.4.0",
+    "svelte-jester": "^1.3.2",
+    "svelte-preprocess": "^4.7.4",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "typescript": "4.3.5"
