--- a/package.json
+++ b/package.json
@@ -71,13 +71,16 @@
     "husky": "^7.0.1",
     "jest": "27.0.3",
     "lint-staged": "^11.0.1",
+    "node-sass": "^6.0.1",
     "prettier": "^2.3.1",
     "rollup-plugin-local-resolve": "^1.0.7",
+    "sass": "^1.37.5",
     "sequelize-typescript": "^2.1.0",
     "svelte": "^3.41.0",
     "svelte-check": "^1.4.0",
     "svelte-jester": "^1.3.2",
     "svelte-preprocess": "^4.7.4",
+    "svelte-preprocess-sass": "^2.0.1",
     "ts-jest": "27.0.3",
     "ts-node": "~9.1.1",
     "typescript": "4.3.5"
