added the smui ui components

--- a/package.json
+++ b/package.json
@@ -55,6 +55,13 @@
     "@nrwl/tao": "12.6.6",
     "@nrwl/workspace": "12.6.6",
     "@nxext/svelte": "^12.0.5",
+    "@smui/button": "^4.2.0",
+    "@smui/card": "^4.2.0",
+    "@smui/form-field": "^4.2.0",
+    "@smui/layout-grid": "^4.2.0",
+    "@smui/list": "^4.2.0",
+    "@smui/paper": "^4.2.0",
+    "@smui/top-app-bar": "^4.2.0",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^1.0.10",
     "@types/jest": "26.0.8",
