--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@types/sequelize": "^4.28.10",
     "@typescript-eslint/eslint-plugin": "4.28.5",
     "@typescript-eslint/parser": "4.28.5",
+    "axios": "0.21.1",
     "cypress": "^7.3.0",
     "dotenv": "8.2.0",
     "eslint": "7.22.0",
@@ -81,6 +82,7 @@
     "node-sass": "^6.0.1",
     "prettier": "^2.3.1",
     "rollup-plugin-local-resolve": "^1.0.7",
+    "rollup-plugin-serve-proxy": "^1.1.4",
     "sass": "^1.37.5",
     "sequelize-typescript": "^2.1.0",
     "svelte": "^3.41.0",
