--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^8.0.1",
+    "dayjs": "^1.10.6",
     "joi": "^17.4.1",
     "mssql": "^7.1.3",
     "reflect-metadata": "^0.1.13",
@@ -86,7 +87,7 @@
     "sass": "^1.37.5",
     "sequelize-typescript": "^2.1.0",
     "svelte": "^3.41.0",
-    "svelte-check": "^1.4.0",
+    "svelte-check": "^1.6.0",
     "svelte-jester": "^1.3.2",
     "svelte-preprocess": "^4.7.4",
     "svelte-preprocess-sass": "^2.0.1",
