--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,7 +3,7 @@
   "files": [],
   "include": [],
   "compilerOptions": {
-    "types":["svelte"]
+    "types":["svelte", "axios"]
   },
   "references": [
     {
