--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^8.0.1",
+    "axios-cache-adapter": "2.7.3",
     "dayjs": "^1.10.6",
     "joi": "^17.4.1",
     "mssql": "^7.1.3",
@@ -46,16 +47,16 @@
   "devDependencies": {
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
-    "@nrwl/cli": "12.6.6",
-    "@nrwl/cypress": "^12.6.6",
-    "@nrwl/eslint-plugin-nx": "12.6.6",
-    "@nrwl/jest": "12.6.6",
-    "@nrwl/linter": "12.6.6",
-    "@nrwl/nest": "12.6.6",
-    "@nrwl/node": "12.6.6",
-    "@nrwl/tao": "12.6.6",
-    "@nrwl/workspace": "12.6.6",
-    "@nxext/svelte": "^12.0.5",
+    "@nrwl/cli": "12.8.0",
+    "@nrwl/cypress": "12.8.0",
+    "@nrwl/eslint-plugin-nx": "12.8.0",
+    "@nrwl/jest": "12.8.0",
+    "@nrwl/linter": "12.8.0",
+    "@nrwl/nest": "12.8.0",
+    "@nrwl/node": "12.8.0",
+    "@nrwl/tao": "12.8.0",
+    "@nrwl/workspace": "12.8.0",
+    "@nxext/svelte": "12.0.6",
     "@smui/button": "^4.2.0",
     "@smui/card": "^4.2.0",
     "@smui/form-field": "^4.2.0",
@@ -72,7 +73,7 @@
     "@typescript-eslint/parser": "4.28.5",
     "axios": "0.21.1",
     "cypress": "^7.3.0",
-    "dotenv": "8.2.0",
+    "dotenv": "10.0.0",
     "eslint": "7.22.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
