--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "lint-staged": "^11.0.1",
     "node-sass": "^6.0.1",
     "prettier": "^2.3.1",
+    "rollup-plugin-babel": "4.4.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-serve-proxy": "^1.1.4",
     "sass": "^1.37.5",
